<resources>
    <string name="app_name">Business Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Business Manager</string>
    <string name="nav_header_subtitle">rmaswi360@outlook.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="purchases">Particulars</string>
    <string name="myworkers">My Workers</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="particular_id">Particular ID</string>
    <string name="particular_name">Name</string>
    <string name="unit_price">Unit Price</string>
    <string-array name="Purchases">
        <item>Soap</item>
        <item>Cook</item>
        <item>Table</item>
    </string-array>
</resources>
