<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bms.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_purchases"
        android:name="com.bms.ui.purchases.ParticularFragment"
        android:label="@string/purchases"
        tools:layout="@layout/fragment_particular" />

    <fragment
        android:id="@+id/nav_myworkers"
        android:name="com.bms.ui.myworkers.MyWorkersFragment"
        android:label="@string/myworkers"
        tools:layout="@layout/fragment_myworkers" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.bms.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.bms.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.bms.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>